--- a/MXWeather.conf
+++ b/MXWeather.conf
@@ -19,7 +19,13 @@ server {
         access_log off;
     }
 
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    location = /realtime.txt {
+        allow all;
+        log_not_found off;
+        access_log off;
+    }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|txt)$ {
         expires max;
         log_not_found off;
     }
