Updated to use /config folder for Cumulus.ini
Cumulus.ini is now no longer stored in the root of the container folder, but in the ./config folder. The container init script handles the copying of the config file in and out.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@
       - ${ROOT}/MXWeather/backup:/opt/CumulusMX/backup
       - ${ROOT}/MXWeather/log:/var/log/nginx
       - ${ROOT}/MXWeather/MXdiags:/opt/CumulusMX/MXdiags
-      - ${ROOT}/MXWeather/Cumulus.ini:/opt/CumulusMX/Cumulus.ini
+      - ${ROOT}/MXWeather/config:/opt/CumulusMX/config
 #     - /tmp/Easyweather.dat:/opt/CumulusMX/Easyweather.dat           # Required to allow for no USB device, and allows for injecting custom EasyWeather data
 #     - /tmp/Easyweatherplus.dat:/opt/CumulusMX/Easyweatherplus.dat   # Required to allow for no USB device, and allows for injecting custom EasyWeather data
     ports:
