Fixed Website location
Fixed issue where website files were being locked and overwritten by template files.

--- a/MXWeather.conf
+++ b/MXWeather.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    root /opt/CumulusMX/web;
+    root /opt/CumulusMX/publicweb;
     index index.htm
 
     # log files
