--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@
       - ${ROOT}/MXWeather/MXdiags:/opt/CumulusMX/MXdiags
       - ${ROOT}/MXWeather/config:/opt/CumulusMX/config
       - ${ROOT}/MXWeather/publicweb:/opt/CumulusMX/publicweb
+      - ${ROOT}/MXWeather/templates:/opt/CumulusMX/web
 #     - /tmp/Easyweather.dat:/opt/CumulusMX/Easyweather.dat           # Required to allow for no USB device, and allows for injecting custom EasyWeather data
 #     - /tmp/Easyweatherplus.dat:/opt/CumulusMX/Easyweatherplus.dat   # Required to allow for no USB device, and allows for injecting custom EasyWeather data
     ports:
