--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Docker Build
+name: Build and Push to Docker Hub
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -6,14 +6,15 @@ name: Docker Build
 # documentation.
 
 on:
-  schedule:
-    - cron: '42 5 * * 2'
   push:
-    branches: [ "master" ]
-    # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "master" ]
+    paths:
+      - 'upstream-releases/*'
+#  push:
+#    branches: [ "master" ]
+#    # Publish semver tags as releases.
+#    tags: [ 'v*.*.*' ]
+#  pull_request:
+#    branches: [ "master" ]
     
 jobs:
   docker:
@@ -36,4 +37,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: hucknz/mxweather:latest
+          tags: hucknz/cumulusmx:latest
