--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -3,6 +3,9 @@ name: Check for new release
 on:
   schedule:
     - cron:  '33 * * * *'
+  push:
+    branches:
+      - master
 
 jobs:
   get-version:
