--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -12,35 +12,37 @@ on:
   push:
     paths:
       - 'upstream-releases/*'
-#  push:
-#    branches: [ "master" ]
-#    # Publish semver tags as releases.
-#    tags: [ 'v*.*.*' ]
-#  pull_request:
-#    branches: [ "master" ]
-    
+  push:
+    branches: [ "master" ]
+    # Publish semver tags as releases.
+    tags: [ 'v*.*.*' ]
+  pull_request:
+    branches: [ "master" ]
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
+      - name: Get latest version number
+        run: echo "BUILD_RELEASE_VERSION=$(cat 'upstream-releases/*')" >> $GITHUB_ENV
+        
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+        
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+        
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+          
+      - name: Build and push
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: hucknz/cumulusmx:latest
+          tags: hucknz/cumulusmx:latest, hucknz/cumulusmx:${{ BUILD_RELEASE_VERSION }}
 
       - name: Send workflow result to Slack
         id: slack
