--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -9,9 +9,9 @@ name: Build and Push to Docker Hub
 # documentation.
 
 on:
-  push:
-    paths:
-      - 'upstream-releases/*'
+#  push:
+#    paths:
+#      - 'upstream-releases/*'
   push:
     branches: [ "master" ]
     # Publish semver tags as releases.
