--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -9,15 +9,15 @@ name: Build and Push to Docker Hub
 # documentation.
 
 on:
-#  push:
-#    paths:
-#      - 'upstream-releases/*'
   push:
-    branches: [ "master" ]
-    # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "master" ]
+    paths:
+      - 'upstream-releases/*'
+#  push:
+#    branches: [ "master" ]
+#    # Publish semver tags as releases.
+#    tags: [ 'v*.*.*' ]
+#  pull_request:
+#    branches: [ "master" ]
 
 jobs:
   docker:
