--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -46,11 +46,22 @@ jobs:
           push: true
           tags: hucknz/cumulusmx:${{ env.VERSION }}, hucknz/cumulusmx:latest
 
-      - name: Send workflow result to Slack
-        uses: rtCamp/action-slack-notify@v2
+      - name: Notify slack success
+        if: success()
         env:
-          SLACK_COLOR: ${{ job.status }}
-          SLACK_MESSAGE: 'Build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}'
-          SLACK_TITLE: ${{ github.repository }} build ${{ job.status }}
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
-          MSG_MINIMAL: true
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_WEBHOOK_URL }}
+        uses: voxmedia/github-action-slack-notify-build@v1
+        with:
+          channel: bingbong
+          status: SUCCESS
+          color: good
+
+      - name: Notify slack fail
+        if: failure()
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_WEBHOOK_URL }}
+        uses: voxmedia/github-action-slack-notify-build@v1
+        with:
+          channel: bingbong
+          status: FAILED
+          color: danger
