--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: hucknz/cumulusmx:${{ env.VERSION }}, hucknz/cumulusmx:latest
 
