Added reports directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@
       - ${DOCKERCONFDIR}/cumulusmx/config:/opt/CumulusMX/config
       - ${DOCKERCONFDIR}/cumulusmx/publicweb:/opt/CumulusMX/publicweb
       - ${DOCKERCONFDIR}/cumulusmx/templates:/opt/CumulusMX/web
+      - ${DOCKERCONFDIR}/cumulusmx/reports:/opt/CumulusMX/Reports
     devices:
       - /dev/hidraw0:/dev/hidraw0
     ports:
