--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -23,7 +23,7 @@ jobs:
           jq 'if .tag_name != null then "-r .tag_name > upstream-releases/cumulusmx-latest.txt" else empty end'
       - name: Check for modified files
         id: git-check
-        run: echo ::set-output name=modified::$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")
+        run: echo "modified=$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")" >> $GITHUB_OUTPUT
       - name: Commit latest release version
         if: steps.git-check.outputs.modified == 'true'
         run: |
