--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -18,9 +18,7 @@ jobs:
         with:
           token: ${{ secrets.PAT }}
       - name: Fetch release version
-        run: |
-          curl -sL https://api.github.com/repos/cumulusmx/CumulusMX/releases/latest | \
-          jq -r ".tag_name" > upstream-releases/cumulusmx-latest.txt
+        run: .github/release-check.sh
       - name: Check for modified files
         id: git-check
         run: echo "modified=$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")" >> $GITHUB_OUTPUT
