--- a/.github/workflows/container-build-push.yml
+++ b/.github/workflows/container-build-push.yml
@@ -52,8 +52,7 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: |
-            hucknz/cumulusmx:${{ env.VERSION }}
-            hucknz/cumulusmx:latest
+            hucknz/cumulusmx
             ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker images
