--- a/.github/workflows/container-build-push.yml
+++ b/.github/workflows/container-build-push.yml
@@ -54,13 +54,17 @@ jobs:
           images: |
             hucknz/cumulusmx
             ghcr.io/${{ github.repository }}
+          tags: |
+            type=raw,value={{env.VERSION}}
+            type=raw,value=latest
 
       - name: Build and push Docker images
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
           push: true
-          tags: hucknz/cumulusmx:${{ env.VERSION }}, hucknz/cumulusmx:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
       - name: Notify slack success
         if: success()
