Add monthly build trigger

--- a/.github/workflows/container-build-push.yml
+++ b/.github/workflows/container-build-push.yml
@@ -14,8 +14,13 @@ on:
     paths:
       - 'upstream-releases/*'
 
-  # Enable manual trigger
+  # Allow manual trigger
   workflow_dispatch:
+  
+  # Trigger monthly to ensure images aren't too stale
+  on:
+  schedule:
+    - cron:  '41 19 1 * *'
 
 
 jobs:
