--- a/.github/workflows/container-build-push.yml
+++ b/.github/workflows/container-build-push.yml
@@ -16,7 +16,7 @@ on:
 
   # Allow manual trigger
   workflow_dispatch:
-  
+
   # Trigger monthly to ensure images aren't too stale
   schedule:
     - cron:  '51 19 1 * *'
@@ -34,10 +34,10 @@ jobs:
         run: |
           VER=$(curl -s https://raw.githubusercontent.com/hucknz/cumulusmx/master/upstream-releases/cumulusmx-latest.txt)
           echo "VERSION=$VER" >> $GITHUB_ENV
-          
+
       - name: Check out the repo
         uses: actions/checkout@v3
-        
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
@@ -67,7 +67,7 @@ jobs:
           tags: |
             type=raw,value=${{ env.VERSION }}
             type=raw,value=latest
-            
+
       - name: Build and push Docker images
         uses: docker/build-push-action@v3
         with:
@@ -96,3 +96,19 @@ jobs:
           channel: bingbong
           status: FAILED
           color: danger
+
+      - name: Notify Discord of failure
+        if: success()
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'CumulusMX build succeeded.'
+
+      - name: Notify Discord of failure
+        if: failure()
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 'CumulusMX build failed.'
