--- a/.github/workflows/container-build-push.yml
+++ b/.github/workflows/container-build-push.yml
@@ -33,26 +33,32 @@ jobs:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
       - name: Get latest version number
+        id: get_version
         run: |
           VER=$(curl -s https://raw.githubusercontent.com/hucknz/cumulusmx/master/upstream-releases/cumulusmx-latest.txt)
           echo "VERSION=$VER" >> $GITHUB_ENV
 
       - name: Check out the repo
+        id: checkout
         uses: actions/checkout@v3
 
       - name: Set up QEMU
+        id: setup_qemu
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
+        id: setup_buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
+        id: authenticate_dockerhub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Log in to the ghcr.io
+        id: authenticate_ghcr
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           registry: ghcr.io
@@ -60,7 +66,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
-        id: meta
+        id: extract_meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: |
@@ -71,6 +77,7 @@ jobs:
             type=raw,value=latest
 
       - name: Build and push Docker images
+        id: build_images
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -78,16 +85,19 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Notify outcome to Discord
-        uses: sarisia/actions-status-discord@v1
-        if: always()
-        with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
           
       - name: Notify outcome to Slack
         uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
           fields: repo,workflow,branch,eventName
+        if: always()
+
+      - name: Notify outcome to Slack
+        id: notify_result
+        uses: act10ns/slack@v2
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          message: Build and push CumulusMX Docker image ${{ job.status }}
         if: always()
