--- a/.github/workflows/container-build-push.yml
+++ b/.github/workflows/container-build-push.yml
@@ -92,4 +92,5 @@ jobs:
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
+          message: CumulusMX build and publish containers was a ${{ job.status }}
         if: always()
