--- a/.github/workflows/container-build-push.yml
+++ b/.github/workflows/container-build-push.yml
@@ -45,20 +45,20 @@ jobs:
         
       - name: Get date of most recent commit
         id: get_date
-        run: echo "NEW_COMMIT_COUNT=$(git log --oneline --since '24 hours ago' | wc -l)" >> $GITHUB_ENV
+        run: echo "MODIFIED=$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")" >> $GITHUB_ENV
         
       - name: Set up QEMU
-        if: ${{ env.NEW_COMMIT_COUNT > 0 }}
+        if: ${{ env.MODIFIED = false }}
         id: setup_qemu
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        if: ${{ env.NEW_COMMIT_COUNT > 0 }}
+        if: ${{ env.MODIFIED = false }}
         id: setup_buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
-        if: ${{ env.NEW_COMMIT_COUNT > 0 }}
+        if: ${{ env.MODIFIED = false }}
         id: authenticate_dockerhub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -66,7 +66,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Log in to the ghcr.io
-        if: ${{ env.NEW_COMMIT_COUNT > 0 }}
+        if: ${{ env.MODIFIED = false }}
         id: authenticate_ghcr
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -75,7 +75,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
-        if: ${{ env.NEW_COMMIT_COUNT > 0 }}
+        if: ${{ env.MODIFIED = false }}
         id: extract_metadata
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
@@ -87,7 +87,7 @@ jobs:
             type=raw,value=latest
 
       - name: Build and push Docker images
-        if: ${{ env.NEW_COMMIT_COUNT > 0 }}
+        if: ${{ env.MODIFIED = false }}
         id: build_images
         uses: docker/build-push-action@v3
         with:
