--- a/.github/workflows/container-build-push.yml
+++ b/.github/workflows/container-build-push.yml
@@ -45,10 +45,10 @@ jobs:
         
       - name: Get date of most recent commit
         id: get_date
-        run: echo "MODIFIED=$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")" >> $GITHUB_ENV
+        run: echo "MODIFIED=$([ -z "`git status --porcelain`" ] && echo "0" || echo "1")" >> $GITHUB_ENV
         
       - name: Set up QEMU
-        if: ${{ env.GIT_MODIFIED = "false" }}
+        if: ${{ env.GIT_MODIFIED = 0 }}
         id: setup_qemu
         uses: docker/setup-qemu-action@v2
 
