--- a/.github/workflows/container-build-push.yml
+++ b/.github/workflows/container-build-push.yml
@@ -53,12 +53,12 @@ jobs:
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        if: ${{ env.GIT_MODIFIED = "false" }}
+        if: ${{ env.MODIFIED > 0 }}
         id: setup_buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
-        if: ${{ env.GIT_MODIFIED = "false" }}
+        if: ${{ env.MODIFIED > 0 }}
         id: authenticate_dockerhub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -66,7 +66,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Log in to the ghcr.io
-        if: ${{ env.GIT_MODIFIED = "false" }}
+        if: ${{ env.MODIFIED > 0 }}
         id: authenticate_ghcr
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -75,7 +75,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
-        if: ${{ env.GIT_MODIFIED = "false" }}
+        if: ${{ env.MODIFIED > 0 }}
         id: extract_metadata
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
@@ -87,7 +87,7 @@ jobs:
             type=raw,value=latest
 
       - name: Build and push Docker images
-        if: ${{ env.GIT_MODIFIED = "false" }}
+        if: ${{ env.MODIFIED > 0 }}
         id: build_images
         uses: docker/build-push-action@v3
         with:
