--- a/.github/workflows/stale-container-build-push.yml
+++ b/.github/workflows/stale-container-build-push.yml
@@ -43,17 +43,17 @@ jobs:
         run: echo "MODIFIED=$(git log --oneline --since '24 hours ago' ./upstream-releases/cumulusmx-latest.txt | wc -l)" >> $GITHUB_ENV
         
       - name: Set up QEMU
-        if: ${{ env.MODIFIED > 0 }}
+        if: ${{ env.MODIFIED = 0 }}
         id: setup_qemu
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        if: ${{ env.MODIFIED > 0 }}
+        if: ${{ env.MODIFIED = 0 }}
         id: setup_buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
-        if: ${{ env.MODIFIED > 0 }}
+        if: ${{ env.MODIFIED = 0 }}
         id: authenticate_dockerhub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -61,7 +61,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Log in to the ghcr.io
-        if: ${{ env.MODIFIED > 0 }}
+        if: ${{ env.MODIFIED = 0 }}
         id: authenticate_ghcr
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -70,7 +70,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
-        if: ${{ env.MODIFIED > 0 }}
+        if: ${{ env.MODIFIED = 0 }}
         id: extract_metadata
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
@@ -82,7 +82,7 @@ jobs:
             type=raw,value=latest
 
       - name: Build and push Docker images
-        if: ${{ env.MODIFIED > 0 }}
+        if: ${{ env.MODIFIED = 0 }}
         id: build_images
         uses: docker/build-push-action@v3
         with:
