--- a/.github/workflows/stale-container-build-push.yml
+++ b/.github/workflows/stale-container-build-push.yml
@@ -1,4 +1,4 @@
-name: Build and push CumulusMX to Docker Hub and ghcr.io
+name: Monthly build and push CumulusMX to Docker Hub and ghcr.io
 
 # This workflow is triggered by an update to the upstream-releases file (which is triggered by the check-releases workflow).
 # When triggered the latest version of the container is built and pushed to docker hub
@@ -45,12 +45,12 @@ jobs:
       - name: Set up QEMU
         if: ${{ env.MODIFIED = 0 }}
         id: setup_qemu
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         if: ${{ env.MODIFIED = 0 }}
         id: setup_buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         if: ${{ env.MODIFIED = 0 }}
@@ -84,7 +84,7 @@ jobs:
       - name: Build and push Docker images
         if: ${{ env.MODIFIED = 0 }}
         id: build_images
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v5
         with:
           context: .
           platforms: linux/amd64,linux/arm64
