--- a/.github/workflows/v3-stale-container-build-push.yml
+++ b/.github/workflows/v3-stale-container-build-push.yml
@@ -1,4 +1,4 @@
-name: Monthly build and push CumulusMX to Docker Hub and ghcr.io
+name: v3 Monthly build and push CumulusMX to Docker Hub and ghcr.io
 
 # This workflow is triggered by an update to the upstream-releases file (which is triggered by the check-releases workflow).
 # When triggered the latest version of the container is built and pushed to docker hub
@@ -81,7 +81,6 @@ jobs:
             hucknz/cumulusmx
             ghcr.io/${{ github.repository }}
           tags: |
-            type=raw,value=${{ env.VERSION }}
             type=raw,value=v3
 
       - name: Build and push Docker images
