--- a/.github/workflows/v4-stale-container-build-push.yml
+++ b/.github/workflows/v4-stale-container-build-push.yml
@@ -82,14 +82,14 @@ jobs:
             ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=${{ env.VERSION }}
-            type=raw,value=latest
+            type=raw,value=v4
 
       - name: Build and push Docker images
         if: ${{ env.MODIFIED < 1 }}
         id: build_images
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: v4
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.extract_metadata.outputs.tags }}
