--- a/.github/workflows/v3-stale-container-build-push.yml
+++ b/.github/workflows/v3-stale-container-build-push.yml
@@ -28,35 +28,20 @@ jobs:
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
-        
-      - name: Get latest version number
-        id: get_version
-        run: |
-          VER=$(curl -s https://raw.githubusercontent.com/hucknz/cumulusmx/master/upstream-releases/cumulusmx-latest.txt)
-          echo "VERSION=$VER" >> $GITHUB_ENV
 
       - name: Check out the repo
         id: checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Required to count the commits
-        
-      - name: Get date of most recent commit
-        id: get_date
-        run: echo "MODIFIED=$(git log --oneline --since '24 hours ago' ./upstream-releases/cumulusmx-latest.txt | wc -l)" >> $GITHUB_ENV
         
       - name: Set up QEMU
-        if: ${{ env.MODIFIED < 1 }}
         id: setup_qemu
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        if: ${{ env.MODIFIED < 1 }}
         id: setup_buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        if: ${{ env.MODIFIED < 1 }}
         id: authenticate_dockerhub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -64,7 +49,6 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Log in to the ghcr.io
-        if: ${{ env.MODIFIED < 1 }}
         id: authenticate_ghcr
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -73,7 +57,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
-        if: ${{ env.MODIFIED < 1 }}
         id: extract_metadata
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
@@ -83,9 +66,9 @@ jobs:
           tags: |
             type=raw,value=b3283
             type=raw,value=v3
+            type=raw,value=latest
 
       - name: Build and push Docker images
-        if: ${{ env.MODIFIED < 1 }}
         id: build_images
         uses: docker/build-push-action@v5
         with:
@@ -101,5 +84,5 @@ jobs:
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-          message: CumulusMX build and publish containers was a ${{ job.status }}
+          message: CumulusMX v3 build and publish containers was a ${{ job.status }}
         if: always()
