Update build for v3

--- a/v3/Dockerfile
+++ b/v3/Dockerfile
@@ -52,7 +52,7 @@ RUN curl -L https://github.com/cumulusmx/CumulusMX/releases/download/b3283/Cumul
 VOLUME ["/opt/CumulusMX/data","/opt/CumulusMX/backup","/opt/CumulusMX/Reports","/var/log/nginx","/opt/CumulusMX/MXdiags","/opt/CumulusMX/publicweb","/opt/CumulusMX/web"]
 
 # Add Start Script# Test File
-COPY ./MXWeather.sh /opt/CumulusMX/
+COPY ./MXWeather_v3.sh /opt/CumulusMX/
 
 # Add Nginx Config
 COPY ./nginx.conf /etc/nginx/
@@ -61,10 +61,10 @@ RUN ln -s /etc/nginx/sites-available/MXWeather.conf /etc/nginx/sites-enabled/MXW
     rm /etc/nginx/sites-enabled/default
 
 WORKDIR /opt/CumulusMX/
-RUN chmod +x MXWeather.sh
+RUN chmod +x MXWeather_v3.sh
 
 # Expose ports
 EXPOSE 80
 EXPOSE 8998
 
-CMD ["./MXWeather.sh"]
+CMD ["./MXWeather_v3.sh"]
