--- a/.github/workflows/beta-container-build-push.yml
+++ b/.github/workflows/beta-container-build-push.yml
@@ -1,4 +1,4 @@
-name: Monthly build and push CumulusMX to Docker Hub and ghcr.io
+name: Build and push CumulusMX to Docker Hub and ghcr.io
 
 # This workflow is triggered by an update to the upstream-releases file (which is triggered by the check-releases workflow).
 # When triggered the latest version of the container is built and pushed to docker hub
@@ -13,14 +13,9 @@ on:
   # Allow manual trigger
   workflow_dispatch:
 
-  # Trigger monthly to ensure images aren't too stale
-  schedule:
-    - cron:  '51 19 1 * *'
-
-
 jobs:
   build_and_push:
-    name: Build and push CumulusMX v4 Docker image to Docker Hub and ghcr.io
+    name: Build and push CumulusMX v4-beta Docker image to Docker Hub and ghcr.io
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -38,25 +33,16 @@ jobs:
       - name: Check out the repo
         id: checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Required to count the commits
-        
-      - name: Get date of most recent commit
-        id: get_date
-        run: echo "MODIFIED=$(git log --oneline --since '24 hours ago' ./upstream-releases/cumulusmx-latest.txt | wc -l)" >> $GITHUB_ENV
         
       - name: Set up QEMU
-        if: ${{ env.MODIFIED < 1 }}
         id: setup_qemu
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        if: ${{ env.MODIFIED < 1 }}
         id: setup_buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        if: ${{ env.MODIFIED < 1 }}
         id: authenticate_dockerhub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -64,7 +50,6 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Log in to the ghcr.io
-        if: ${{ env.MODIFIED < 1 }}
         id: authenticate_ghcr
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -73,7 +58,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
-        if: ${{ env.MODIFIED < 1 }}
         id: extract_metadata
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
@@ -85,7 +69,6 @@ jobs:
             type=raw,value=v4
 
       - name: Build and push Docker images
-        if: ${{ env.MODIFIED < 1 }}
         id: build_images
         uses: docker/build-push-action@v5
         with:
