--- a/.github/workflows/v4-container-build-push.yml
+++ b/.github/workflows/v4-container-build-push.yml
@@ -24,7 +24,7 @@ on:
 
 jobs:
   build_and_push:
-    name: Build and push CumulusMX Docker image to Docker Hub and ghcr.io
+    name: Build and push CumulusMX v4 Docker image to Docker Hub and ghcr.io
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -75,14 +75,13 @@ jobs:
             ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=${{ env.VERSION }}
-            type=raw,value=latest
-            type=raw,value=v3
+            type=raw,value=v4
 
       - name: Build and push Docker images
         id: build_images
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: v4
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.extract_metadata.outputs.tags }}
@@ -94,5 +93,5 @@ jobs:
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-          message: CumulusMX build and publish containers was a ${{ job.status }}
+          message: CumulusMX v4 build and publish containers was a ${{ job.status }}
         if: always()
