--- a/.github/workflows/v3-stale-container-build-push.yml
+++ b/.github/workflows/v3-stale-container-build-push.yml
@@ -20,7 +20,7 @@ on:
 
 jobs:
   build_and_push:
-    name: Build and push CumulusMX Docker image to Docker Hub and ghcr.io
+    name: v3 monthly build and push
     runs-on: ubuntu-latest
     permissions:
       packages: write
