--- a/.github/workflows/beta-container-build-push.yml
+++ b/.github/workflows/beta-container-build-push.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build_and_push:
-    name: Beta build and push
+    name: beta build and push
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -44,14 +44,14 @@ jobs:
 
       - name: Log in to Docker Hub
         id: authenticate_dockerhub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Log in to the ghcr.io
         id: authenticate_ghcr
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -59,7 +59,7 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: extract_metadata
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v5
         with:
           images: |
             hucknz/cumulusmx
@@ -83,5 +83,5 @@ jobs:
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-          message: CumulusMX v4 build and publish containers was a ${{ job.status }}
+          message: CumulusMX ${{job.name}} was a ${{ job.status }}
         if: always()
