--- a/.github/workflows/v4-stale-container-build-push.yml
+++ b/.github/workflows/v4-stale-container-build-push.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Log in to Docker Hub
         if: ${{ env.MODIFIED < 1 }}
         id: authenticate_dockerhub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -66,7 +66,7 @@ jobs:
       - name: Log in to the ghcr.io
         if: ${{ env.MODIFIED < 1 }}
         id: authenticate_ghcr
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -75,7 +75,7 @@ jobs:
       - name: Extract metadata (tags, labels) for Docker
         if: ${{ env.MODIFIED < 1 }}
         id: extract_metadata
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v5
         with:
           images: |
             hucknz/cumulusmx
