Add beta configuration

--- a/.github/workflows/beta-container-build-push.yml
+++ b/.github/workflows/beta-container-build-push.yml
@@ -71,7 +71,7 @@ jobs:
         id: build_images
         uses: docker/build-push-action@v5
         with:
-          context: v4
+          context: beta
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.extract_metadata.outputs.tags }}
