Add support for versioned beta builds

--- a/.github/workflows/beta-container-build-push.yml
+++ b/.github/workflows/beta-container-build-push.yml
@@ -65,6 +65,7 @@ jobs:
             hucknz/cumulusmx
             ghcr.io/${{ github.repository }}
           tags: |
+            type=raw,value=beta-${{ env.VERSION }}
             type=raw,value=v4-beta
 
       - name: Build and push Docker images
